--- a/sass/style.css
+++ b/sass/style.css
@@ -278,7 +278,7 @@ progress {
 }
 
 body {
-  font-family: Arial, "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+  font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
 }
 
 ul {
@@ -291,7 +291,49 @@ a {
 }
 
 img {
-  -o-object-fit: cover;
-     object-fit: cover;
   max-width: 100%;
+  border-style: none;
+}
+
+.header {
+  width: 100vw;
+  padding: 40px 0 1px 50px;
+  background-color: aqua;
+}
+.header__title {
+  width: 100px;
+}
+.header__titleLink {
+  display: block;
+}
+.header__logo {
+  width: 100%;
+}
+.header__hamburger {
+  height: 100px;
+  width: 100px;
+  background-color: #ff2a2a;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 100;
+  transition: 0.3s;
+}
+.header__hamburgerLine {
+  height: 2px;
+  width: 50px;
+  background-color: #fff;
+  position: absolute;
+  left: 25px;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+}
+.header__hamburgerLine:nth-child(1) {
+  top: 36px;
+}
+.header__hamburgerLine:nth-child(2) {
+  top: 50px;
+}
+.header__hamburgerLine:nth-child(3) {
+  top: 64px;
 }/*# sourceMappingURL=style.css.map */
