--- a/sass/_foundation.scss
+++ b/sass/_foundation.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
+  font-family: "游ゴシック体", "YuGothic", "游ゴシック", "Yu Gothic", sans-serif;
 }
 
 ul {
