--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -3,7 +3,6 @@
 .header {
   width: 100vw;
   padding: 40px 0 1px 50px;
-  background-color: aqua;
 
   &__title {
     width: 100px;
@@ -26,6 +25,7 @@
     right: 0;
     z-index: 100;
     transition: 0.3s;
+    cursor: pointer;
 
     &Line {
       height: 2px;
@@ -34,7 +34,6 @@
       position: absolute;
       left: 25px;
       transition: 0.3s ease-in-out;
-      cursor: pointer;
 
       &:nth-child(1) {
         top: 36px;
@@ -46,6 +45,22 @@
 
       &:nth-child(3) {
         top: 64px;
+      }
+    }
+
+    &--close {
+      span:nth-child(1) {
+        top: 47px;
+        left: 23px;
+        transform: rotate(-45deg);
+      }
+      span:nth-child(2) {
+        opacity: 0;
+      }
+      span:nth-child(3) {
+        top: 47px;
+        left: 23px;
+        transform: rotate(45deg);
       }
     }
   }
