--- a/sass/style.css
+++ b/sass/style.css
@@ -278,7 +278,7 @@ progress {
 }
 
 body {
-  font-family: "游ゴシック体", YuGothic, "游ゴシック", "Yu Gothic", sans-serif;
+  font-family: "游ゴシック体", "YuGothic", "游ゴシック", "Yu Gothic", sans-serif;
 }
 
 ul {
@@ -298,7 +298,6 @@ img {
 .header {
   width: 100vw;
   padding: 40px 0 1px 50px;
-  background-color: aqua;
 }
 .header__title {
   width: 100px;
@@ -318,6 +317,7 @@ img {
   right: 0;
   z-index: 100;
   transition: 0.3s;
+  cursor: pointer;
 }
 .header__hamburgerLine {
   height: 2px;
@@ -326,7 +326,6 @@ img {
   position: absolute;
   left: 25px;
   transition: 0.3s ease-in-out;
-  cursor: pointer;
 }
 .header__hamburgerLine:nth-child(1) {
   top: 36px;
@@ -336,4 +335,73 @@ img {
 }
 .header__hamburgerLine:nth-child(3) {
   top: 64px;
+}
+.header__hamburger--close span:nth-child(1) {
+  top: 47px;
+  left: 23px;
+  transform: rotate(-45deg);
+}
+.header__hamburger--close span:nth-child(2) {
+  opacity: 0;
+}
+.header__hamburger--close span:nth-child(3) {
+  top: 47px;
+  left: 23px;
+  transform: rotate(45deg);
+}
+
+.hamburgerNav {
+  display: none;
+  width: 100vw;
+  height: 100vh;
+  background-color: #ff2a2a;
+  color: white !important;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  text-align: center;
+}
+.hamburgerNav--active {
+  display: block;
+}
+.hamburgerNav__logoLink {
+  width: 100px;
+  position: absolute;
+  top: 40px;
+  left: 50px;
+}
+.hamburgerNav__logo {
+  width: 100%;
+}
+.hamburgerNav__linkWrap {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+.hamburgerNav__lists {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+.hamburgerNav__link {
+  color: white;
+  font-weight: bold;
+}
+.hamburgerNav__link:hover {
+  color: rgba(255, 255, 255, 0.7);
+}
+.hamburgerNav__entryLink {
+  font-weight: bold;
+  color: white;
+  border: 2px solid white;
+  padding: 10px 30px;
+}
+.hamburgerNav__entryLink:hover {
+  color: rgba(255, 255, 255, 0.7);
 }/*# sourceMappingURL=style.css.map */
